WIP #198: setup for sidecar  - created setup and requirements for dev&prod  - installs package in docker (instead of reference via sys.path). this way all third-parties are installed.  - minor cleanup of code

--- a/services/sidecar/Dockerfile
+++ b/services/sidecar/Dockerfile
@@ -2,32 +2,54 @@ FROM python:3.6-alpine as common
 
 LABEL maintainer="Manuel Guidon <guidon@itis.ethz.ch"
 
-WORKDIR /work/sidecar
+RUN apk add --no-cache \
+      postgresql-dev \
+      gcc \
+      libc-dev
 
-RUN apk add --no-cache postgresql-dev gcc libc-dev
+RUN pip install --upgrade \
+      pip \
+      wheel \
+      setuptools
 
-COPY services/sidecar/requirements.txt requirements.txt
+WORKDIR /work
+# Buil context set at repo's root
+COPY services/sidecar/requirements requirements
 
-RUN pip install --upgrade pip \
-    && pip install -r requirements.txt \
-    && pip list --format=columns
+RUN pip install -r requirements/base.txt &&\
+    rm -rf requirements
+
+# Keeps same folder structure as in repo so we can reuse relative paths
+RUN mkdir -p /work/packages &&\
+    mkdir -p /work/services/sidecar
 
 EXPOSE 8000
 
+
+# --------------------------Development stage -------------------
 FROM common as development
 
-VOLUME /work/sidecar
 VOLUME /work/packages
+VOLUME /work/services/sidecar
+WORKDIR /work/services/sidecar
 
-# NO clue why this does not work without explicitly specifying
-ENTRYPOINT celery -A sidecar worker -c 2 --loglevel=info
+CMD pip install -r requirements/dev.txt &&\
+    celery -A sidecar worker -c 2 --loglevel=info
 
+
+# --------------------------Production stage -------------------
 FROM common as production
 
-# the context for the build is the git repo root directory
-COPY services/sidecar/src /work
+# Buil context set at repo's root
 COPY packages /work/packages
+COPY services/sidecar /work/services/sidecar
 
-# NO clue why this does not work without explicitly specifying
-ENV PYTHONPATH="/work/packages/simcore-sdk/src:/work/packages/s3wrapper/src"
+WORKDIR /work/services/sidecar
+
+RUN pip install -r requirements/prod.txt && pip list;\
+    rm -rf /work/packages &&\
+    rm -rf /work/services/sidecar
+
+WORKDIR /work
+
 ENTRYPOINT celery -A sidecar worker -c 2 --loglevel=info
