WIP #198:  - added a boot.sh script to start celery worker  - restructured package submodules. Otherwise got error (see comments in #198)  -

--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -31,5 +31,5 @@ services:
     build:
       target: development
     volumes:
-      - ./sidecar/src/sidecar:/work/sidecar
+      - ./sidecar:/work/services/sidecar
       - ../packages:/work/packages
