WIP #198: non-root user  - all volumes bound to /home/scu  - All modules pip installed (in dev w/ edit mode).  - All files produce in dev mode on bound volumes are not deletable  - Production stage is further optimized by taking only venv from base  - Fixes sidecar access to input/output/log volumes

--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -29,7 +29,9 @@ services:
   sidecar:
     image: services_sidecar:dev
     build:
+      args:
+        - HOST_GID_ARG=${HOST_GID:?Undefined host gid}
       target: development
     volumes:
-      - ./sidecar:/work/services/sidecar
-      - ../packages:/work/packages
+      - ./sidecar:/home/scu/services/sidecar
+      - ../packages:/home/scu/packages
