--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     build:
       context: ../
       dockerfile: services/web/Dockerfile
-      target: ci
+      target: production
     ports:
       - '9081:8080'
     environment:
